fix: remove fixed positions
This prevents form buttons to
overlap with the page
footer-component.

Refs: SHPPWS-54

--- a/src/pages/EndPermit.module.scss
+++ b/src/pages/EndPermit.module.scss
@@ -24,7 +24,6 @@
 .actions {
   padding: $spacing-m 0;
   box-shadow: 0 -5px 5px -5px $color-black-30;
-  position: fixed;
   width: 100%;
   max-width: $breakpoint-xl;
   left: calc(100% - #{$breakpoint-xl}) / 2;
